<resources>
    <string name="app_name">E-Canteen</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="hint_password">*****</string>
    <string name="remember">Remember be</string>
    <string name="or">-OR-</string>
    <string name="sign_in_with">Sign in with</string>
    <string name="dont_have_account">Don\'t have an account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="have_account">Have an account ?</string>
    <string name="sign_in">Sign In</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wait">Wait</string>
    <string name="wrong_password">Wrong Password !!</string>
    <string name="enter_email">Enter your email</string>
    <string name="catagories">Catagories</string>
    <string name="popular">Popular Now</string>
    <string name="favorite">Favorite</string>
    <string name="food">Food</string>
    <string name="drink">Drink</string>
    <string name="snack">Snack</string>
    <string name="dessert">Dessert</string>
    <string name="setting">Settings</string>
    <string name="cart">Cart</string>
    <string name="riwayat">Riwayat</string>
    <string name="myorder">My Order</string>
    <string name="promo">Promo Discount</string>
    <string name="totalprice">Total Price</string>
    <string name="payment_method">Payment Method</string>
    <string name="dana">Dana</string>
    <string name="Gopay">Go-Pay</string>
    <string name="virtual">Virtual Account</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="profil">Profile</string>
    <string name="cards">Cards</string>
    <string name="security">Security</string>
    <string name="bank">Bank</string>
    <string name="notif">Notifications</string>
    <string name="rincianpesanan">Rincian Pesanan</string>
    <string name="lihatwarung">Lihat Warung</string>
</resources>