<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/home"/>
    <item
        android:id="@+id/chat"
        android:enabled="true"
        android:icon="@drawable/chat"
        android:title="@string/chat"/>

    <item
        android:id="@+id/setting"
        android:enabled="true"
        android:icon="@drawable/setting"
        android:title="@string/setting"/>

    <item
        android:id="@+id/cart"
        android:enabled="true"
        android:icon="@drawable/cart"
        android:title="@string/cart"/>

    <item
        android:id="@+id/riwayat"
        android:enabled="true"
        android:icon="@drawable/riwayat"
        android:title="@string/riwayat"/>


</menu>