<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="vart"
            type="com.ani.e_canteen.ui.cart.CartFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/warna_dasar"
        tools:context=".ui.cart.CartFragment">

        <RelativeLayout
            android:id="@+id/relativeLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <View
                android:id="@+id/line_3"
                android:layout_width="wrap_content"
                android:layout_height="5dp"
                android:background="@drawable/line" />


            <TextView
                android:id="@+id/txt_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/line_3"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/breeserif"
                android:text="@string/myorder"
                android:textColor="@color/kuning_mentah"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/price_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/line_3"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/breeserif"
                android:text="-"
                android:textColor="@color/kuning_mentah"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/txt_promo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_item"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/breeserif"
                android:text="@string/promo"
                android:textColor="@color/kuning_mentah"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/price_promo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_item"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/breeserif"
                android:text="-"
                android:textColor="@color/kuning_mentah"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txt_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_promo"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/breeserif"
                android:text="@string/totalprice"
                android:textColor="@color/kuning_mentah"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/price_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_promo"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/breeserif"
                android:text="-"
                android:textColor="@color/kuning_mentah"
                android:textSize="18sp" />


        </RelativeLayout>

        <ImageButton
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/btn_payment"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_order"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintBottom_toTopOf="@+id/relativeLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
            app:layout_constraintVertical_bias="0.100000024" />

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/fbutton_color_transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:src="@drawable/btn_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:fontFamily="@font/breeserif"
                android:text="@string/myorder"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <ImageView
                android:id="@+id/titik_dua"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:src="@drawable/titikdua" />

        </RelativeLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>